syntax = "proto3";

package todoService;

option go_package = "gen/service";

import "google/protobuf/timestamp.proto";

service TodoService {
  rpc GetAll(GetAllRequest) returns (GetAllResponse) {}
  rpc Add(AddRequest) returns (AddResponse) {}
}

message Todo {
  enum Status {
    UNKNOWN = 0;
    WAITING = 1;
    DOING = 2;
    DONE = 3;
  }

  int32 id = 1;
  string content = 2;
  Status status = 3;
  google.protobuf.Timestamp created_at = 4;
}

message GetAllRequest {}

message GetAllResponse {
  repeated Todo todos = 1;
}

message AddRequest {
  string content = 1;
}

message AddResponse {
  Todo todo = 1;
}
